docs/src/main/product-page-src/src/styles/global.css
@import "../../node_modules/bulma/css/bulma.css";
@import "./variables.css";
@import "./footer.css";
@import "./header.css";
@import "./call-out.css";
@import "./email-catch.css";
@import "./mobile-menu.css";
@import "./nav-menu.css";
@import "./fun.css";

@media (min-width: 320px) {
  /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
}
@media (min-width: 480px) {
  /* smartphones, Android phones, landscape iPhone */
}
@media (min-width: 600px) {
  /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
}
@media (min-width: 801px) {
  /* tablet, landscape iPad, lo-res laptops ands desktops */
}
@media (min-width: 1025px) {
  /* big landscape tablets, laptops, and desktops */
}
@media (min-width: 1281px) {
  /* hi-res laptops and desktops */
}

@font-face {
  font-family: "Metropolis";
  src: url("../../static/fonts/Metropolis/Metropolis-Bold.otf"),
    format("opentype");
  src: url("../../static/fonts/Metropolis/Metropolis-ExtraBold.otf"),
    format("opentype");
  src: url("../../static/fonts/Metropolis/Metropolis-Regular.otf"),
    format("opentype");
  src: url("../../static/fonts/Metropolis/Metropolis-Light.otf"),
    format("opentype");
  src: url("../../static/fonts/Metropolis/Metropolis-ExtraLight.otf"),
    format("opentype");
}

body {
  margin: 0;
}

.card {
  border-radius: 0.5em;
}

section .container {
  padding-top: 2em;
  padding-bottom: 2em;
}

h1 {
  font-family: "Metropolis", sans-serif;
  font-weight: 800;
}

h2,
h3 {
  font-family: "Metropolis", sans-serif;
  font-weight: 800;
}

button {
  outline-style: none;
  border: none;
  background-color: transparent;
  padding: 0;
  cursor: pointer;
  font-family: "Roboto", sans-serif;
}

.button {
  font-weight: 400;
  background-color: var(--primary);
  border: none;
  color: #fff;
  font-weight: 600;
  padding: 0.5em 1em;
  border-radius: 38px;
  text-align: center;
  width: auto;
  opacity: 0.8;
  transition: all 300ms cubic-bezier(0.995, 0.015, 0.01, 0.98);
}

.button:hover,
.button.is-hovered {
  color: white;
  opacity: 1;
}

.button img.arrow {
  width: 0.5em;
  margin-left: 0.5em;
  height: auto;
}

a {
  color: var(--link);
  text-decoration: none;
  transition: all 300ms cubic-bezier(0.995, 0.015, 0.01, 0.98);
}

a:hover {
  color: var(--link-hover);
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.content ul {
  padding: 0;
  margin: 0;
}

ul ul,
.content ul ul {
  margin-left: 1em;
}

li {
  list-style: none;
}

.gradient {
  background-color: #060b13;
  background-image: linear-gradient(326deg, #060b13 0%, #0b1848 74%);
  /* background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%); */
}

/* 
Hero
*/
.title {
  font-weight: 800;
}
.hero {
  color: white;
}
.hero .title,
.hero .subtitle {
  color: white;
}
.hero .subtitle {
  max-width: 750px;
}
.hero h1 {
  font-size: 3em;
}
.full-height {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
}
.hero .gradient {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  background: transparent
    linear-gradient(349deg, #0a1e55 0%, #2e2e67 27%, #5f1359 62%, #010101 100%)
    0% 0% no-repeat padding-box;

  background-blend-mode: screen;
  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
  z-index: 0;
}

canvas {
  z-index: 1;
  position: relative;
}

.hero .gradient.subtraction {
  background-image: url("../../static/img/subtraction.svg");
  clip-path: none;
}

@media (max-width: 600px) {
  .hero .gradient.subtraction {
    background-size: cover;
  }
}
@media (min-width: 1025px) {
  .hero .gradient.subtraction {
    background-position-y: -100vh;
    height: 130vh;
  }
}
@media (min-width: 1281px) {
  .hero .gradient.subtraction {
    background-position-y: -50vh;
    height: 130vh;
  }
}

.hero .button {
  min-width: 160px;
}

.content.centered {
  text-align: center;
}

.content h2,
h3 {
  font-weight: 800;
}

.placeholder {
  display: block;
  width: 200px;
  height: 200px;
  margin: 0 auto;
}

.short-product-description {
  padding: 1em 0;
}

.columns.alternating-orientation:nth-of-type(even) {
  flex-direction: row-reverse;
}

.page-title {
  margin: 4rem 0 2rem;
  font-size: 42px;
}

.lines {
  opacity: 0.2;
}

@media (max-width: 800px) {
  .page-title {
    margin: 2em 0 1em;
    font-size: 32px;
  }
}

@media (max-width: 480px) {
  .page-title {
    margin: 1em 0 1em;
    font-size: 28px;
  }
}

.page-subtitle {
  font-size: 24px;
  font-weight: 800;
  margin: 3em 0 1em;
}

@media (max-width: 480px) {
  .page-subtitle {
    font-size: 22px;
    margin: 1em 0 1em;
  }
}

.text-centered {
  text-align: center;
}

.wrapping {
  flex-wrap: wrap;
}

.wrapping.centered {
  justify-content: center;
}

.center-flex {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.overflow-hidden {
  overflow: hidden;
}

.stretch {
  width: 100%;
  display: flex;
  justify-content: inherit;
}

@media (max-width: 600px) {
  .hero .gradient {
    height: 120%;
  }
  .container {
    padding: 2em;
  }
}

.product-image {
  margin-bottom: 1em;
  margin-top: 1em;
}

#any-questions .section-title {
  margin-bottom: 1.5em;
}

.get-help-link {
  width: 200px;
}

section .container.with-room {
  padding-top: 5em;
  padding-bottom: 5em;
}

a.box:hover,
a.box:focus {
  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px var(--link);
}

svg.replaced-svg {
  height: 100%;
  width: 100%;
}

svg.secondary {
  fill: var(--secondary);
  stroke: var(--secondary);
}

svg.primary {
  fill: var(--link);
  stroke: var(--link);
}

.subtle {
  transition: all 300ms cubic-bezier(0.995, 0.015, 0.01, 0.98);
  opacity: 0.5;
}
.subtle:hover,
a:hover .subtle {
  opacity: 1;
}

.product-diagram {
  margin: 5em 0;
}

.product-diagram img {
  max-width: 700px;
}

@media (max-width: 850px) {
  .product-diagram img {
    max-width: none;
    width: 100%;
  }
}

